# PARAKH

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: mockup.html
docs/: audit_ledger.md  integration.md  model_card.md  platform_identity.md  real_data_validation.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  format.ts  handoff.ts  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BorrowerCard.tsx  ConsentPanel.tsx  DimensionRings.tsx  Header.tsx  LenderConsole.tsx  MonitoringPanel.tsx  NewMsmeForm.tsx  ReasonList.tsx  RoiCalculator.tsx  ScoreGauge.tsx  WhatIfCoach.tsx
frontend/src/data/: borrowers.ts  roi.ts
frontend/src/styles/: global.css
src/parakh/: config.py
src/parakh/adapters/: __init__.py  base.py  persona.py
src/parakh/api/: app.py  extraction.py
src/parakh/audit/: ledger.py
src/parakh/consent/: artefact.py
src/parakh/eval/: ablation.py  delong.py  fairness.py  metrics.py  stability.py
src/parakh/genai/: llm.py  memo.py  ocr.py
tests/: conftest.py  test_ablation.py  test_adapters.py  test_api.py  test_audit_ledger.py  test_consent.py  test_delong.py  test_extraction.py  test_fairness.py  test_identity.py  test_lender.py  test_metrics.py  test_monitoring.py  test_ocr.py  test_pd_to_score.py  test_persona.py  test_real_validation.py  test_reason_codes.py  test_reject_inference.py  test_scoring.py  test_stability.py  test_text.py
(+10 files in other folders)
